[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/ui/selector_button.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/lock_icon.png" type="Texture" id=2]

[node name="selector_button" type="Control"]

rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="colorFrame" type="ColorFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 1, 1, 1, 1 )

[node name="texFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
expand = true
stretch_mode = 0

[node name="lockIcon" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 4.0
margin/right = 36.0
margin/bottom = 36.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0


